--- a/blocks/content.css
+++ b/blocks/content.css
@@ -1,3 +1,10 @@
 .content {
-  padding: 0 20px;
+  padding: 20px;
+  justify-items: center;
+}
+
+@media screen and (max-width: 627px) {
+  .content {
+    padding: 16px;
+  }
 }
