--- a/blocks/page.css
+++ b/blocks/page.css
@@ -6,5 +6,7 @@
 
 .page__section {
   max-width: 1280px;
-  margin: 0 auto;
+  width: 100%;
+  padding-top: 20px;
+  border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
 }
