--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -8,7 +8,7 @@
   height: 190px;
   width: 190px;
   margin-right: 20px;
-  border-radius: 2%;
+  border-radius: 8px;
 }
 
 .profile__column {
@@ -20,6 +20,9 @@
 .profile__name {
   margin: 0 0 12px;
   font-weight: 500;
+  font-size: 32px;
+  line-height: 32px;
+  color: #212121;
   text-overflow: ellipsis;
   overflow: hidden;
   line-clamp: 3;
@@ -31,6 +34,11 @@
 
 .profile__description {
   margin: 0;
+  font-weight: 500;
+  size: 16px;
+  line-height: 16px;
+  color: #212121;
+  opacity: 70%;
   text-overflow: ellipsis;
   overflow: hidden;
   line-clamp: 3;
@@ -43,11 +51,12 @@
 .profile__edit-button {
   margin-top: auto;
   margin-right: auto;
-  background-color: #fcf5e5;
+  background-color: transparent;
   border: none;
   display: flex;
   padding: 0;
   gap: 8px;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1;
@@ -56,17 +65,18 @@
 }
 
 .profile__edit-button:hover {
-  color: #212121;
   opacity: 100%;
 }
 
 .profile__add-button {
+  border: none;
   margin-left: auto;
   margin-top: auto;
   width: 157px;
   height: 52px;
   color: #fcf5e5;
-  border-radius: 10px;
+  border-radius: 8px;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
   font-weight: 500;
   line-height: 1;
   padding: 0;
@@ -76,7 +86,6 @@
 }
 
 .profile__add-button:hover {
-  background-color: #212121;
   opacity: 80%;
 }
 
@@ -104,7 +113,6 @@
 
   .profile__description {
     margin-bottom: 32px;
-    font-size: 16px;
     max-width: 288px;
   }
 
@@ -117,7 +125,6 @@
     margin-left: 0;
     max-width: 288px;
     width: 100%;
-    background-color: black;
   }
 
   .profile__edit-button {
