--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -35,6 +35,7 @@
   opacity: 40%;
   background-image: center;
   border: none;
+  background-color: transparent;
 }
 
 .modal__title {
@@ -64,7 +65,7 @@
   opacity: 40%;
 }
 
-.modal__sumbit-btn {
+.modal__button {
   width: 156px;
   padding: 18px 0;
   background-color: #212121;
