--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -24,6 +24,7 @@
   position: relative;
   width: 100%;
   box-sizing: border-box;
+  border-radius: 8px;
 }
 
 .modal__close-btn {
@@ -36,6 +37,10 @@
   background-image: center;
   border: none;
   background-color: transparent;
+}
+
+.modal__close-btn:hover {
+  opacity: 100%;
 }
 
 .modal__title {
@@ -55,7 +60,7 @@
   font-size: 16px;
   line-height: 17.6px;
   color: #212121;
-  opacity: 70%;
+  opacity: 100%;
 }
 
 .modal__input {
@@ -63,6 +68,10 @@
   border-radius: 8px;
   color: #212121;
   opacity: 40%;
+}
+
+.modal__input:hover {
+  opacity: 100%;
 }
 
 .modal__button {
