--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -41,6 +41,7 @@
 
 .modal__close-btn:hover {
   opacity: 100%;
+  cursor: pointer;
 }
 
 .modal__title {
@@ -66,12 +67,13 @@
 .modal__input {
   padding: 16px 12px;
   border-radius: 8px;
-  color: #212121;
-  opacity: 40%;
+  color: #21212166;
+  font-size: 20px;
 }
 
 .modal__input:hover {
   opacity: 100%;
+  cursor: pointer;
 }
 
 .modal__button {
@@ -84,6 +86,12 @@
   line-height: 16px;
   color: #fcf5e5;
   border-radius: 8px;
+}
+
+.modal__button:hover {
+  cursor: pointer;
+  background-color: #212121;
+  opacity: 80%;
 }
 
 @media screen and (max-width: 627px) {
