--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,5 +1,6 @@
 .card {
   max-width: 413px;
+  position: relative;
 }
 
 .card__title {
@@ -45,8 +46,30 @@
   opacity: 100%;
 }
 
-.card__like-button:hover {
+.card__like-button_is-active {
+  background-image: url(../images/Liked.svg);
   opacity: 100%;
+}
+
+.card__like-button:hover {
+  background-image: url(../images/Liked-Hover.svg);
+  opacity: 0.4;
+}
+
+.card__delete-button {
+  background-image: url(../images/Delete=Default.svg);
+  height: 32px;
+  width: 32px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+}
+
+.card__delete-button:hover {
+  background-image: url(../images/Delete-Hover.svg);
 }
 
 @media screen and (max-width: 627px) {
