--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -34,9 +34,32 @@
   width: 40px;
   height: 40px;
   opacity: 40%;
-  background-image: center;
+  background-image: url(../images/CloseIcon.svg);
+  background-repeat: no-repeat;
+  background-position: center;
   border: none;
   background-color: transparent;
+}
+
+.modal__close_type_preview {
+  position: absolute;
+  top: 0;
+  right: -44.5px;
+  width: 40px;
+  height: 40px;
+  background-image: url(../images/CloseIcon.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  border: none;
+  background-color: transparent;
+  opacity: 0.4;
+}
+
+.modal__close_type_preview:hover {
+  top: 0;
+  right: -52.5px;
+  opacity: 1;
+  cursor: pointer;
 }
 
 .modal__close-btn:hover {
@@ -92,6 +115,32 @@
   cursor: pointer;
   background-color: #212121;
   opacity: 80%;
+}
+
+.modal__container {
+  position: center;
+}
+
+.modal__container_type_preview {
+  background-color: transparent;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal__image {
+  max-width: 80vw;
+  max-height: 80vh;
+  object-fit: contain;
+  display: block;
+  border-radius: 8px;
+}
+
+.modal__heading {
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+  color: white;
+  border: #212121;
 }
 
 @media screen and (max-width: 627px) {
