--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -34,7 +34,6 @@
   width: 40px;
   height: 40px;
   opacity: 40%;
-  background-image: url(../images/CloseIcon.svg);
   background-repeat: no-repeat;
   background-position: center;
   border: none;
@@ -127,6 +126,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.modal__caption {
+  color: white;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 120%;
+  width: 198px;
+  height: 20px;
+  position: fixed;
+  top: 750px;
+  left: 373px;
+  border-radius: 8px;
+  background-color: #212121;
 }
 
 .modal__image {
