--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -25,6 +25,7 @@
   width: 100%;
   box-sizing: border-box;
   border-radius: 8px;
+  flex-direction: row;
 }
 
 .modal__close-btn {
@@ -41,11 +42,12 @@
 }
 
 .modal__close_type_preview {
-  position: absolute;
-  top: 0;
+  position: fixed;
+  top: -30px;
   right: -44.5px;
-  width: 40px;
-  height: 40px;
+  width: 41px;
+  height: 150px;
+  cursor: pointer;
   background-image: url(../images/CloseIcon.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -171,9 +173,42 @@
     margin: 10px 0 34px;
   }
 
+  .modal__input {
+    padding: 16px 12px;
+    border-radius: 8px;
+    color: #212121;
+    font-size: 20px;
+  }
+
+  .modal__image {
+    max-height: none;
+    max-width: none;
+    width: 100%;
+  }
+
+  .modal__button {
+    width: 276px;
+    padding: 18px 0;
+    background-color: #212121;
+    font-family: Poppins, Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    size: 60px;
+    line-height: 16px;
+    color: #fcf5e5;
+    border-radius: 8px;
+  }
+
   .modal__close-btn {
+    cursor: pointer;
     top: 12px;
     right: 12px;
+  }
+
+  .modal__close-btn:hover {
+    cursor: pointer;
+    top: 12px;
+    right: 12px;
+    background-color: #212121;
   }
 
   .modal__label {
@@ -183,4 +218,8 @@
   .modal__sumbit-btn {
     width: 100%;
   }
+}
+
+.modal__close_type_preview {
+  top: -41px;
 }
