--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -26,12 +26,13 @@
   box-sizing: border-box;
   border-radius: 8px;
   flex-direction: row;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
 }
 
 .modal__close-btn {
   position: absolute;
-  top: 32px;
-  right: 50px;
+  top: 0px;
+  right: -32px;
   width: 40px;
   height: 40px;
   opacity: 40%;
@@ -39,28 +40,7 @@
   background-position: center;
   border: none;
   background-color: transparent;
-}
-
-.modal__close_type_preview {
-  position: fixed;
-  top: -30px;
-  right: -44.5px;
-  width: 41px;
-  height: 150px;
-  cursor: pointer;
-  background-image: url(../images/CloseIcon.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  border: none;
-  background-color: transparent;
-  opacity: 0.4;
-}
-
-.modal__close_type_preview:hover {
-  top: 0;
-  right: -52.5px;
-  opacity: 1;
-  cursor: pointer;
+  color: #fff;
 }
 
 .modal__close-btn:hover {
@@ -128,19 +108,30 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: unset;
+  max-width: unset;
+}
+
+.modal__close_type_image-preview {
+  top: 0;
+  right: -32px;
+  color: #fff;
 }
 
 .modal__caption {
   color: white;
   font-family: Poppins, Arial, Helvetica, sans-serif;
-  font-size: 20px;
+  font-size: 19px;
   font-weight: 500;
   line-height: 120%;
+  letter-spacing: 0%;
+  text-align: center;
+  margin: 0;
   width: 198px;
-  height: 20px;
-  position: fixed;
-  top: 750px;
-  left: 373px;
+  height: 24px;
+  position: absolute;
+  top: calc(100% + 10px);
+  left: 0;
   border-radius: 8px;
   background-color: #212121;
 }
@@ -165,7 +156,7 @@
   }
 
   .modal__container {
-    padding: 12px;
+    padding: 5px;
   }
 
   .modal__title {
@@ -200,14 +191,22 @@
 
   .modal__close-btn {
     cursor: pointer;
-    top: 12px;
-    right: 12px;
+    top: -32px;
+    right: 0;
+    color: #fff;
+  }
+
+  .modal__close_type_image-preview {
+    top: -32px;
+    right: 0;
+    padding: 12px;
+    color: #fff;
   }
 
   .modal__close-btn:hover {
     cursor: pointer;
-    top: 12px;
-    right: 12px;
+    top: -32px;
+    right: 0;
     background-color: #212121;
   }
 
@@ -218,8 +217,4 @@
   .modal__sumbit-btn {
     width: 100%;
   }
-}
-
-.modal__close_type_preview {
-  top: -41px;
 }
