--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -11,10 +11,18 @@
   justify-content: center;
   visibility: hidden;
   padding: 0 20px;
+  transition: visibility 0.3s, opacity 0.3s ease-in;
+  opacity: 0;
 }
 
 .modal_opened {
   visibility: visible;
+  opacity: 1;
+}
+
+.modal_close {
+  visibility: hidden;
+  opacity: 0;
 }
 
 .modal__container {
@@ -30,19 +38,19 @@
 }
 
 .modal__close-btn {
-  position: absolute;
-  top: 0px;
-  right: -32px;
-  width: 40px;
-  height: 40px;
-  opacity: 40%;
-  background-repeat: no-repeat;
-  background-position: center;
+  width: 22.63px;
+  height: 22.63px;
+  background: transparent url("../images/CloseIcon.svg") center no-repeat;
+  background-size: 35px 35px;
   border: none;
-  background-color: transparent;
-  color: #fff;
+  position: absolute;
+  top: 36px;
+  right: 50px;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+  opacity: 0.4;
 }
-
 .modal__close-btn:hover {
   opacity: 100%;
   cursor: pointer;
@@ -150,6 +158,15 @@
   border: #212121;
 }
 
+.modal__close-btn_type_preview {
+  background: url("../images/Close\ Icon.svg") center no-repeat;
+  width: 40px;
+  height: 40px;
+  top: -10px;
+  right: -38px;
+  cursor: pointer;
+}
+
 @media screen and (max-width: 627px) {
   .modal {
     padding: 0 10px;
@@ -160,12 +177,13 @@
   }
 
   .modal__title {
+    font-size: 23px;
     font-weight: 20px;
     margin: 10px 0 34px;
   }
 
   .modal__input {
-    padding: 16px 12px;
+    padding: 9px 12px;
     border-radius: 8px;
     color: #212121;
     font-size: 20px;
@@ -178,7 +196,7 @@
   }
 
   .modal__button {
-    width: 276px;
+    width: 290px;
     padding: 18px 0;
     background-color: #212121;
     font-family: Poppins, Arial, Helvetica, sans-serif;
@@ -190,10 +208,12 @@
   }
 
   .modal__close-btn {
-    cursor: pointer;
-    top: -32px;
-    right: 0;
-    color: #fff;
+    top: 22px;
+    right: 12px;
+  }
+  .modal__close-btn_type_preview {
+    top: -23px;
+    right: 12px;
   }
 
   .modal__close_type_image-preview {
@@ -207,7 +227,6 @@
     cursor: pointer;
     top: -32px;
     right: 0;
-    background-color: #212121;
   }
 
   .modal__label {
