--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -129,14 +129,13 @@
 .modal__caption {
   color: white;
   font-family: Poppins, Arial, Helvetica, sans-serif;
-  font-size: 19px;
+  font-size: 20px;
   font-weight: 500;
   line-height: 120%;
   letter-spacing: 0%;
-  text-align: center;
+  text-align: left;
   margin: 0;
-  width: 198px;
-  height: 24px;
+  padding: 4px, 8px, 4px, 8px;
   position: absolute;
   top: calc(100% + 10px);
   left: 0;
@@ -195,13 +194,20 @@
     width: 100%;
   }
 
+  .modal__caption {
+    font-family: Poppins, Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    size: 16px;
+    line-height: 120%;
+    letter-spacing: 0%;
+  }
+
   .modal__button {
     width: 290px;
     padding: 18px 0;
     background-color: #212121;
     font-family: Poppins, Arial, Helvetica, sans-serif;
     font-weight: 500;
-    size: 60px;
     line-height: 16px;
     color: #fcf5e5;
     border-radius: 8px;
@@ -211,22 +217,11 @@
     top: 22px;
     right: 12px;
   }
+
   .modal__close-btn_type_preview {
-    top: -23px;
-    right: 12px;
-  }
-
-  .modal__close_type_image-preview {
-    top: -32px;
-    right: 0;
-    padding: 12px;
-    color: #fff;
-  }
-
-  .modal__close-btn:hover {
-    cursor: pointer;
-    top: -32px;
-    right: 0;
+    top: -29px;
+    left: 264px;
+    padding: 0;
   }
 
   .modal__label {
