--- a/blocks/card.css
+++ b/blocks/card.css
@@ -79,7 +79,7 @@
 @media screen and (max-width: 627px) {
   .card__image {
     height: 288px;
-    width: 288px;
+    width: 100%;
   }
 
   .card__title {
