--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -163,8 +163,10 @@
 }
 
 @media screen and (max-width: 627px) {
-  .modal {
-    padding: 0 10px;
+  .modal__container {
+    padding: 22px 20px;
+    width: 100%;
+    max-width: 100%;
   }
 
   .modal__title {
@@ -195,7 +197,8 @@
   }
 
   .modal__button {
-    width: 290px;
+    width: 100%;
+    height: 52px;
     padding: 18px 0;
     background-color: #212121;
     font-family: Poppins, Arial, Helvetica, sans-serif;
