New update for my project

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -175,7 +175,7 @@
     font-weight: 500;
     line-height: 100%;
     letter-spacing: 0%;
-    margin: 10px 0 34px;
+    margin: 0 0 34px;
   }
 
   .modal__container_type_preview {
