--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,254 +1,239 @@
 .modal {
+  visibility: hidden;
+  background-color: #00000080;
   position: fixed;
   top: 0;
-  left: 0;
-  bottom: 0;
   right: 0;
-  background-color: rgb(0, 0, 0, 0.5);
+  bottom: 0;
+  left: 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  visibility: hidden;
-  padding: 0 10px;
-  transition: visibility 0.3s, opacity 0.3s ease-in;
+  align-items: center;
   opacity: 0;
+  transition: visibility 0.5s, opacity 0.3s;
 }
 
-.modal_opened {
+.modal_is-opened {
   visibility: visible;
   opacity: 1;
 }
 
-.modal_close {
-  visibility: hidden;
-  opacity: 0;
-}
-
 .modal__container {
-  background-color: #fff;
-  padding: 32px 50px;
   max-width: 730px;
-  position: relative;
   width: 100%;
-  box-sizing: border-box;
   border-radius: 8px;
-  flex-direction: row;
-  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  background-color: #fff;
+  box-sizing: border-box;
+  padding: 32px 50px;
+  position: relative;
 }
 
 .modal__close-btn {
-  width: 22.63px;
-  height: 22.63px;
-  background: transparent url("../images/CloseIcon.svg") center no-repeat;
-  background-size: 35px 35px;
-  border: none;
-  position: absolute;
-  top: 36px;
-  right: 50px;
   padding: 0;
-  margin: 0;
+  position: absolute;
+  top: 32px;
+  right: 50px;
+  width: 40px;
+  height: 40px;
+  background-image: url(../images/CloseIcon.svg);
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border: none;
   cursor: pointer;
   opacity: 0.4;
 }
-.modal__close-btn:hover {
-  opacity: 100%;
+
+.modal__close-btn_preview {
+  background-image: url(../images/CloseIcon.svg);
+  top: 0;
+  right: -52.5px;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  border: none;
   cursor: pointer;
+  position: absolute;
+}
+
+.modal__close-btn_preview:hover {
+  background-image: url(../images/CloseIcon.svg);
+  opacity: 1;
+  cursor: pointer;
+  color: rgba(255, 255, 255, 1);
+}
+
+.modal__close-btn:hover {
+  opacity: 1;
+  transition: opacity 0.5s;
 }
 
 .modal__title {
   margin: 0 0 32px;
-  font-weight: 500;
+  line-height: 32px;
+  width: 100%;
   font-size: 32px;
-  line-height: 1;
+  font-weight: 500;
+  color: rgba(33, 33, 33, 1);
+  font-family: "poppins", sans-serif;
+}
+
+.modal__form {
+  display: flex;
+  flex-direction: column;
+  font-family: "poppins", sans-serif;
+  font-size: 16px;
 }
 
 .modal__label {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  margin-bottom: 32px;
-  border-radius: 8px;
-  font-weight: 500;
+  margin: 0 0 32px;
+  font-family: "poppins", sans-serif;
   font-size: 16px;
-  line-height: 17.6px;
-  color: #212121;
-  opacity: 100%;
+  font-weight: 500;
+  color: rgba(33, 33, 33, 0.7);
 }
 
 .modal__input {
-  padding: 16px 12px;
+  display: block;
+  margin: 8px 0 0;
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
   border-radius: 8px;
-  color: #21212166;
+  border-color: rgba(33, 33, 33, 0.4);
+  font-family: "poppins", sans-serif;
   font-size: 20px;
+  line-height: 20px;
+  font-weight: 500;
+  color: rgba(33, 33, 33, 1);
+  border: 1px solid rgba(33, 33, 33, 0.4);
+  transition: border-color 0.5s;
+}
+
+.modal__input_type_error {
+  border: 1px solid rgba(255, 0, 0, 0.6);
 }
 
 .modal__input:hover {
-  opacity: 100%;
   cursor: pointer;
+  border-color: rgba(33, 33, 33, 1);
 }
 
-.modal__button {
-  width: 156px;
-  padding: 18px 0;
-  background-color: #212121;
-  font-family: Poppins, Arial, Helvetica, sans-serif;
-  font-weight: 500;
-  size: 16px;
-  line-height: 100%;
-  color: #fcf5e5;
-  border-radius: 8px;
-}
-
-.modal__button:hover {
-  cursor: pointer;
-  background-color: #212121;
-  opacity: 80%;
-}
-
-.modal__container_type_preview {
-  background-color: transparent;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: unset;
-  max-width: unset;
-}
-
-.modal__close_type_image-preview {
-  top: 0;
-  right: -32px;
-  color: #fff;
-}
-
-.modal__caption {
-  color: white;
-  font-family: Poppins, Arial, Helvetica, sans-serif;
+.modal__input::placeholder {
+  color: rgba(33, 33, 33, 0.3);
+  font-family: "poppins", sans-serif;
   font-size: 20px;
-  font-weight: 500;
-  line-height: 120%;
-  letter-spacing: 0%;
-  text-align: left;
-  margin: 0;
-  padding: 4px 8px 4px 8px;
-  position: absolute;
-  top: calc(100% + 10px);
-  left: 0;
+}
+
+.modal__error {
+  display: block;
+  color: rgba(255, 0, 0, 0.7);
+  font-family: "poppins", sans-serif;
+  font-size: 16px;
+  margin-top: 8px;
+}
+
+.modal__submit-btn {
+  border: 0;
+  width: 100%;
+  max-width: 156px;
   border-radius: 8px;
+  padding: 15px;
   background-color: #212121;
+  color: rgba(252, 245, 229, 1);
+  font-family: "poppins", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 100%;
+  cursor: pointer;
+}
+
+.modal__submit-btn:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+.modal__submit-btn:hover {
+  opacity: 0.8;
+  transition: opacity 0.5s;
+}
+.modal__container_preview {
+  position: relative;
+  background-color: transparent;
+  margin: auto 0;
+  padding: 0;
+  max-width: none;
+  width: unset;
 }
 
 .modal__image {
   max-width: 80vw;
   max-height: 80vh;
+  width: 100%;
   object-fit: contain;
   display: block;
   border-radius: 8px;
 }
 
-.modal__heading {
-  font-family: Poppins, Arial, Helvetica, sans-serif;
-  color: white;
-  border: #212121;
-}
-
-.modal__close-btn_type_preview {
-  background: url("../images/Close\ Icon.svg") center no-repeat;
-  width: 40px;
-  height: 40px;
-  top: -10px;
-  right: -38px;
-  cursor: pointer;
+.modal__caption {
+  font-family: "poppins", sans-serif;
+  color: rgba(255, 255, 255, 1);
+  background-color: rgba(33, 33, 33, 1);
+  border-radius: 8px;
+  position: absolute;
+  left: 0;
+  top: calc(100% + 10px);
+  padding: 4px 8px;
+  margin: 0;
 }
 
 @media screen and (max-width: 627px) {
-  .modal__container {
-    padding: 22px 12px 12px;
-    width: 100%;
-    max-width: 100%;
+  .modal {
+    padding: 10px;
+    border-radius: inherit;
   }
-
   .modal__title {
-    font-family: Poppins, Arial, Helvetica, sans-serif;
     font-size: 20px;
-    font-weight: 500;
     line-height: 100%;
-    letter-spacing: 0%;
-    margin: 0 0 34px;
   }
-
-  .modal__container_type_preview {
-    padding: 0;
-  }
-
   .modal__input {
-    padding: 16px 12px;
-    border: 1px solid #212121;
-    border-radius: 8px;
-    gap: 10px;
+    width: -webkit-fill-available;
+    margin: auto 0;
     font-size: 16px;
-    font-family: Poppins, Arial, Helvetica, sans-serif;
-    font-weight: 500;
-    letter-spacing: 0%;
-    color: #212121;
-    opacity: 1;
-    box-sizing: border-box;
+    line-height: 100%;
   }
-
-  .modal__input:not(:placeholder-shown) {
-    color: #212121;
-  }
-
-  .modal__input::placeholder {
-    opacity: 0.4;
-  }
-
-  .modal__image {
-    max-height: none;
+  .modal__submit-btn {
     max-width: none;
     width: 100%;
-  }
-
-  .modal__caption {
-    font-family: Poppins, Arial, Helvetica, sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 120%;
-    letter-spacing: 0%;
-  }
-
-  .modal__button {
-    width: 100%;
     height: 52px;
-    padding: 18px 0;
-    background-color: #212121;
-    font-family: Poppins, Arial, Helvetica, sans-serif;
-    font-weight: 500;
-    line-height: 16px;
-    color: #fcf5e5;
-    border-radius: 8px;
+    padding: 18px 32px;
   }
 
   .modal__close-btn {
-    width: 40px;
-    height: 40px;
     top: 12px;
     right: 12px;
   }
-
-  .modal__close-btn_type_preview {
-    top: -40px;
-    right: -8px;
+  .modal__container {
+    padding: 22px 12px 12px;
+  }
+  .modal__container_preview {
     padding: 0;
   }
-
-  .modal__label {
-    color: #212121;
-    opacity: 100%;
+  .modal__close-btn_preview {
+    top: -48px;
+    right: 0;
+    width: 32px;
+    height: 32px;
+    background-image: url(../images/close-btn-preview.svg);
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
   }
-
-  .modal__sumbit-btn {
-    width: 100%;
+  .modal_type_preview {
+    padding: 0 16px;
+  }
+  .modal__image {
+    max-width: unset;
   }
 }
