--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -35,7 +35,7 @@
 .profile__description {
   margin: 0;
   font-weight: 500;
-  size: 16px;
+  font-size: 16px;
   line-height: 16px;
   color: #212121;
   opacity: 70%;
@@ -124,7 +124,7 @@
     margin-right: 12px;
   }
 
-  .profile__add-button {
+  .profile__add-btn {
     margin-left: 0;
     max-width: 288px;
     width: 100%;
